sort.basic.gnome.AlgGnomeSort.scala.error
Compilation error:
AlgGnomeSort:11: error: ';' expected but 'else' found.
    else if (i!=0){
    ^